# forensic-webhistory

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: carver.rs  lib.rs  main.rs  output.rs  scanner.rs
src/browsers/: chrome.rs  chrome_autofill.rs  chrome_bookmarks.rs  chrome_cookies.rs  chrome_downloads.rs  chrome_extensions.rs  chrome_keywords.rs  chrome_logins.rs  firefox.rs  firefox_autofill.rs  firefox_bookmarks.rs  firefox_cookies.rs  firefox_downloads.rs  firefox_extensions.rs  firefox_logins.rs  mod.rs  safari.rs  webcache.rs
