[package]
name = "forensic-webhistory"
version = "0.1.0"
edition = "2021"
description = "Forensic Browser History Analyzer — Cross-platform extractor for Chrome, Firefox, IE/Edge"
license = "MIT"
repository = "https://github.com/acquiredsecurity/forensic-webhistory"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
libesedb = "0.2"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
anyhow = "1"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
